<resources>
    <string name="app_name">AgriculturalApp</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="catalog">Каталог</string>
    <string name="add">Добавить</string>
    <string name="saved">Избранное</string>
    <string name="save">Сохранить</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="age">Возраст</string>
    <string name="location">Место жительства</string>
    <string name="registration">Регистрация</string>
    <string name="сreate">Создать</string>
    <string name="tel">Номер телефона</string>
    <string name="dushanbe">Душанбе, Таджикистан</string>
    <string name="popularity">По популярности</string>
    <string name="filters">Фильтры</string>
    <string name="personal_area">Личный кабинет</string>
    <string name="exit">Выход</string>
    <string name="personal_information">Личная информация</string>
    <string name="basic_information">Основная информация</string>
    <string name="additional_information">Дополнительная информация</string>
    <string name="my_ads">Мои объявления</string>
    <string name="edit_ads">Изменить объявление</string>
    <string name="submit_ads">Подать объявление</string>
    <string name="contact_center">Контакт центр</string>
    <string name="name">Название</string>
    <string name="price">Стоимость:</string>
    <string name="address">Адрес</string>
    <string name="email">Адрес электронной почты</string>
    <string name="category">Категория</string>
    <string name="categories">Категории</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="dateOfBirthday">День рождения (ГГГГ-ММ-ДД)</string>
    <string name="con">Продолжить</string>
    <string name="description">Описание</string>
    <string name="password">Пароль</string>
    <string name="password2">Повторите пароль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>