<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignInFragment">


    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="284dp"
        android:text="@string/tel"
        android:textColor="@color/black_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="284dp"
        android:text="@string/password"
        android:textColor="@color/black_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:paddingStart="74dp"
        android:textSize="16sp"
        android:paddingEnd="16dp"
        android:background="@drawable/edittext_background"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <View
        android:id="@+id/view4"
        android:layout_width="1dp"
        android:layout_height="55dp"
        android:layout_marginEnd="240dp"
        android:background="@color/mid_grey"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPhone2"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone2"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone2"
        app:layout_constraintTop_toTopOf="@+id/editTextPhone2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="44dp"
        android:layout_height="21dp"
        android:text="+992"
        android:textColor="@color/black_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPhone2"
        app:layout_constraintEnd_toStartOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone2"
        app:layout_constraintTop_toTopOf="@+id/editTextPhone2" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>